# AWSCvGenerator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docker-ecr-deploy.yml  ecr-deploy.yml
src/: 1_publish_ecr.py  2_deploy_ec2.py  publish_ecr.py
src/app/: .gitignore  Dockerfile  app.py
src/app/css/: style.css
src/app/static/css/: resume.css  resume_builder.css
src/app/templates/: index.html  resume.html  resume_builder.html
terraform/: auto_scaling.tf  load_balancer.tf  main.tf  main_ec2.tf  main_ecr.tf  network.tf  outputs.tf  security.tf  tfplan.json  variables.tf
